(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.

7/16/2001: mkoeppe
	   * Added changes for the Macintosh contributed by Luigi
	   Ballabio <ballabio@mac.com>. 
	   * Some "const" fixes in the code.

7/13/2001: mkoeppe
	   * [Guile]: Some "const" fixes for Guile version 1.3.4.
	   * Handle anonymous arguments with default values and static
	     array members of classes.  Both bugs reported by Annalisa Terracina
	     <annalisa.terracina@datamat.it>; see the files
	     Examples/guile/test-suite/static-array-member.i and
	     anonymous-arg.i.

Version 1.3.6  (July 9, 2001)
=============================

7/09/2001: cheetah (william fulton)
	   * GIFPlot examples: FOREGROUND and BACKGROUND definition missing 
	   after TRANSPARENT #define fix in GIFPlot

7/03/2001: beazley
           Fixed up the version numbers so that the release is known
           as 1.3.6.  All future releases should have a similar
           version format.

7/02/2001: mkoeppe
	   * [Python]: Prevent the problem of self.thisown not being
	   defined if the C++ class constructor raised an exception.
	   Thanks to Luigi Ballabio <ballabio@mac.com>.

6/29/2001: mkoeppe
	   * More portability fixes; fixed "gcc -Wall" warnings.

6/29/2001: cheetah (william fulton)
	   * GIFPlot examples: TRANSPARENT #define multiple times on Solaris 
	   (clashes with stream.h).
	   * Multiple definition bug fix for shadow classes. The perl and python 
	   modules had workarounds which have been replaced with fixes in 
	   the core. Many of the Language::cpp_xxxx functions now set a 
	   flag which the derived classes can access through 
	   is_multiple_definition() to see whether or not code should be 
	   generated.  The code below would have produced varying degrees 
	   of incorrect shadow class code for the various modules: